--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.0.0",
     "express-session": "^1.11.1",
     "express-then": "^1.0.2",
-    "facebook-node-sdk": "^0.2.0",
+    "facebook-node-sdk": "git+https://github.com/Thuzi/facebook-node-sdk.git#master",
+    "fb": "git+https://github.com/Thuzi/facebook-node-sdk.git#master",
     "lodash": "^3.8.0",
     "mongoose": "^4.0.3",
     "morgan": "^1.0.0",
